--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mordern_javascript",
+  "name": "typescript_module",
   "version": "1.0.0",
   "description": "practice javascript / typescript",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "Wongyo Lee <ranazang@naver.com>",
   "license": "ISC",
   "dependencies": {
+    "inquirer": "^12.0.1",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
@@ -16,7 +17,15 @@
     "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@types/node": "^22.8.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
   }
